Native/Test/KL/missing-method.kl
/*
 *  Copyright 2010-2012 Fabric Engine Inc. All rights reserved.
 */

struct Foo {
  String bar;
};

operator entry() {
  Foo foo;
  report foo.baz("Hello", 42, true);
}
